add more contents in Tungsten Model

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ theme:
     - scheme: tungsten
   icon:
     repo: fontawesome/brands/github
+  features:
+    - navigation.tabs
 
 repo_name: tungsten-ai/tungsten
 repo_url: https://github.com/tungsten-ai/docs
@@ -20,11 +22,13 @@ extra_javascript:
   - js/termynal.js
 
 nav:
-  - Tungsten: index.md
+  - Overview: index.md
   - Tungsten Model:
       - Getting Started: tungsten_model/getting_started.md
       - Use GPUs: tungsten_model/use_gpus.md
-      # - Input/Output: tungsten_model/inputs_and_outputs.md
+      - Input/Output: tungsten_model/input_and_output.md
+      - The TungstenModel Class: tungsten_model/the_tungsten_model_class.md
+      # - Tungstenkit CLI: tungsten_model/tungstenkit_cli.md
       # - Advanced Containerization: tungsten_model/advanced_containerization.md
   - Tungsten Server:
       - Getting Started: tungsten_server/getting_started.md
